--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,8 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./app.js",
-    "dev": "nodemon ./app.js"
+    "start": "node ./index.js",
+    "dev": "nodemon ./index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Tomasrv333/mern-tasksApp"
   },
   "author": "",
   "license": "ISC",
@@ -13,10 +17,11 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2",
+    "chalk": "^5.2.0",
     "pg": "^8.9.0"
   }
 }
