--- a/Backend/package.json
+++ b/Backend/package.json
@@ -2,10 +2,10 @@
   "name": "nodejs-learning",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "Backend/index.js",
   "scripts": {
-    "start": "node ./index.js",
-    "dev": "nodemon ./index.js"
+    "start": "node Backend/index.js",
+    "dev": "nodemon Backend/index.js"
   },
   "repository": {
     "type": "git",
@@ -14,14 +14,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "chalk": "^4.1.2",
     "nodemon": "^2.0.20"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "chalk": "^5.2.0",
+    "express": "^4.18.2",
+    "node-fetch": "^2.6.9",
     "pg": "^8.9.0"
   }
 }
