--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,28 +1,35 @@
 {
-  "name": "nodejs-learning",
-  "version": "1.0.0",
-  "description": "",
-  "main": "Backend/index.js",
-  "scripts": {
-    "start": "node Backend/index.js",
-    "dev": "nodemon Backend/index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Tomasrv333/mern-tasksApp"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "chalk": "^4.1.2",
-    "nodemon": "^2.0.20"
-  },
-  "dependencies": {
-    "body-parser": "^1.20.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "node-fetch": "^2.6.9",
-    "pg": "^8.9.0"
-  }
+	"name": "nodejs-learning",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"type": "module",
+	"scripts": {
+		"dev": "nodemon index.js",
+		"start": "node index.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/Tomasrv333/mern-tasksApp"
+	},
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"chalk": "^4.1.2",
+		"eslint": "^8.34.0",
+		"eslint-config-airbnb-base": "^15.0.0",
+		"eslint-plugin-import": "^2.27.5",
+		"nodemon": "^2.0.20"
+	},
+	"dependencies": {
+		"bcryptjs": "^2.4.3",
+		"cookie-parser": "^1.4.6",
+		"cors": "^2.8.5",
+		"dotenv": "^16.0.3",
+		"express": "^4.18.2",
+		"jsonwebtoken": "^9.0.0",
+		"mongoose": "^6.9.2",
+		"morgan": "^1.10.0",
+		"node-fetch": "^2.6.9"
+	}
 }
