--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -3,9 +3,10 @@
 	"version": "1.0.0",
 	"type": "module",
 	"scripts": {
-		"dev": "vite",
-		"build": "vite build",
-		"preview": "vite preview"
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
 	},
 	"dependencies": {
 		"axios": "^1.3.3",
@@ -14,7 +15,8 @@
 		"react-dom": "^18.2.0",
 		"react-hot-toast": "^2.4.0",
 		"react-icons": "^4.7.1",
-		"react-router-dom": "^6.8.1"
+		"react-router-dom": "^6.8.1",
+		"react-scripts": "^5.0.1"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.27",
