--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,9 +1,10 @@
 {
 	"name": "frontend",
+	"proxy": "http://127.0.0.1:8000",
 	"version": "1.0.0",
 	"type": "module",
 	"scripts": {
-		"start": "react-scripts start",
+		"start": "react-scripts --openssl-legacy-provider start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
@@ -22,7 +23,20 @@
 		"@types/react": "^18.0.27",
 		"@types/react-dom": "^18.0.10",
 		"@vitejs/plugin-react": "^3.1.0",
+		"@vitejs/plugin-react-refresh": "^1.3.6",
 		"sass": "^1.58.3",
-		"vite": "^4.1.0"
+		"vite": "^4.1.4"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
 	}
 }
