--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "frontend",
-	"proxy": "http://127.0.0.1:8000",
+	"proxy": "http://localhost:8000",
 	"version": "1.0.0",
 	"type": "module",
 	"scripts": {
@@ -22,10 +22,7 @@
 	"devDependencies": {
 		"@types/react": "^18.0.27",
 		"@types/react-dom": "^18.0.10",
-		"@vitejs/plugin-react": "^3.1.0",
-		"@vitejs/plugin-react-refresh": "^1.3.6",
-		"sass": "^1.58.3",
-		"vite": "^4.1.4"
+		"sass": "^1.58.3"
 	},
 	"browserslist": {
 		"production": [
