Mongo_Uri settings

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=8000
-DB_CONNECTION_STRING=mongodb+srv://Tomasrv123:qdtPN8O4WGY8ehES@task_management.smq1twv.mongodb.net/?retryWrites=true&w=majority
+DB_CONNECTION_STRING=mongodb+srv://Tomasrv123:qdtPN8O4WGY8ehES@tcluster0.smq1twv.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET=123321
