--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "mern-tasksApp",
+	"name": "mern-taskapp",
 	"version": "1.0.0",
 	"description": "Mern Task App",
 	"main": "index.js",
