--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,6 +1,5 @@
 {
 	"name": "frontend",
-	"proxy": "http://localhost:8000",
 	"version": "1.0.0",
 	"type": "module",
 	"scripts": {
@@ -11,13 +10,14 @@
 	},
 	"dependencies": {
 		"axios": "^1.3.3",
+		"http-proxy-middleware": "^2.0.6",
 		"moment": "^2.29.4",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-hot-toast": "^2.4.0",
 		"react-icons": "^4.7.1",
 		"react-router-dom": "^6.8.1",
-		"react-scripts": "^5.0.1"
+		"react-scripts": "^2.1.3"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.27",
