--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
 		"axios": "^1.3.3",
 		"http-proxy-middleware": "^2.0.6",
 		"moment": "^2.29.4",
+		"node-sass": "^8.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-hot-toast": "^2.4.0",
