--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -2,8 +2,9 @@
 	"name": "frontend",
 	"version": "1.0.0",
 	"type": "module",
+	"proxy": "http://127.0.0.1:5000",
 	"scripts": {
-		"start": "react-scripts --openssl-legacy-provider start",
+		"start": "react-scripts --max-http-header-size=16384 start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
